# agent-sdk-rs

./: .env.anthropic-ollama  .env.ollama  .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
docs/: provider-quirks.md
examples/: custom_tool.rs  nvidia_nim.rs  openai.rs  simple.rs  streaming.rs  tui.rs
src/: lib.rs  main.rs
src/agent/: agent.rs  agent_loop.rs  mod.rs  session.rs
src/api/: anthropic.rs  client.rs  mod.rs  ollama.rs  openai_compat.rs  retry.rs  streaming.rs  types.rs
src/context/: compact.rs  mod.rs  system_prompt.rs
src/cost/: mod.rs  pricing.rs  tracker.rs
src/hooks/: engine.rs  mod.rs  types.rs
src/mcp/: client.rs  mod.rs  tool_adapter.rs  transport.rs
src/permissions/: checker.rs  mod.rs
src/tools/: bash.rs  executor.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  mod.rs  registry.rs
src/tui/: app.rs  components.rs  mod.rs  state.rs
src/types/: config.rs  mcp.rs  message.rs  mod.rs  permission.rs  sdk_message.rs  tool.rs
src/utils/: mod.rs  tokens.rs
tests/: ollama_integration.rs
