[package]
name = "claude-agent-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust SDK for building autonomous AI agents powered by Claude"

[features]
default = ["built-in-tools", "mcp", "tui"]
built-in-tools = ["tokio/process", "grep-regex", "grep-searcher", "ignore", "globset", "similar"]
mcp = ["tokio-tungstenite"]
cost-tracking = []
web-tools = ["reqwest/cookies", "scraper"]
subagents = []
hooks = []
tui = ["ratatui", "crossterm"]
all = ["built-in-tools", "mcp", "cost-tracking", "web-tools", "subagents", "hooks", "tui"]

[dependencies]
# Core
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }
futures = "0.3"
thiserror = "2"
tracing = "0.1"
anyhow = "1"
bytes = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Search tools (built-in-tools feature)
grep-regex = { version = "0.1", optional = true }
grep-searcher = { version = "0.1", optional = true }
ignore = { version = "0.4", optional = true }
globset = { version = "0.4", optional = true }
similar = { version = "2", optional = true }

# MCP (mcp feature)
tokio-tungstenite = { version = "0.24", optional = true }

# Web tools (web-tools feature)
scraper = { version = "0.20", optional = true }

# TUI (tui feature)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
